welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:50: error: type mismatch;
 found   : Unit
 required: Boolean
  }else if(getDirection()==Direction.OUEST){
        ^